[package]
name = "tide"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "parking_lot"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["compression-full"] }
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "health"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
